[gd_scene load_steps=4 format=3 uid="uid://bmqixs5ucqrlv"]

[ext_resource type="Script" path="res://text.gd" id="1_lql3f"]
[ext_resource type="Theme" uid="uid://bn22c4i68u7ed" path="res://basictext.tres" id="2_wyxjk"]
[ext_resource type="Texture2D" uid="uid://iynsdvxj57c1" path="res://goty.png" id="3_hqejb"]

[node name="titlescreen" type="Node2D"]
script = ExtResource("1_lql3f")

[node name="title" type="Label" parent="."]
offset_left = 919.0
offset_top = 82.0
offset_right = 1784.0
offset_bottom = 183.0
theme = ExtResource("2_wyxjk")
theme_override_colors/font_color = Color(1, 0.847059, 0.909804, 1)
theme_override_font_sizes/font_size = 64
text = "coolest game in the world"

[node name="label" type="Label" parent="."]
offset_left = 98.0
offset_top = 66.0
offset_right = 379.0
offset_bottom = 89.0
theme = ExtResource("2_wyxjk")
text = "enter players, seperated by commas"

[node name="names_field" type="TextEdit" parent="."]
offset_left = 96.0
offset_top = 99.0
offset_right = 424.0
offset_bottom = 145.0
theme = ExtResource("2_wyxjk")

[node name="names_display" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1095.0
offset_top = 273.0
offset_right = 1731.0
offset_bottom = 1028.0
grow_horizontal = 0
theme = ExtResource("2_wyxjk")
theme_override_font_sizes/font_size = 48

[node name="ready_button" type="Button" parent="."]
offset_left = 97.0
offset_top = 163.0
offset_right = 224.0
offset_bottom = 204.0
theme = ExtResource("2_wyxjk")
text = "start game"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -15.0
offset_top = -9.0
offset_right = 1944.0
offset_bottom = 1094.0
mouse_filter = 2
color = Color(0.0745098, 0.333333, 0.203922, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(498.044, 727.968)
scale = Vector2(6.95912, 6.65402)
texture = ExtResource("3_hqejb")

[connection signal="text_changed" from="names_field" to="." method="_on_names_field_text_changed"]
[connection signal="pressed" from="ready_button" to="." method="_on_submit_button_pressed"]
